# plant-splat

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/splats/: cameras.json
src/: __init__.py  augment.py  disease.py  filter_points.py  filter_splat.py  generate_dataset.py  reconstruct.py  render.py  segment.py  synthesize_disease.py
