[project]
name = "plant-splat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "gsplat>=1.5.3",
    "huggingface-hub>=1.2.3",
    "numpy>=1.26,<2",
    "opencv-python>=4.6.0.66",
    "sam-2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
